force-app/main/default/objects/custom_create185__c/custom_create185__c.object-meta.xml
<CustomObject>
    <label>Custom created object185</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects185</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>