force-app/main/default/objects/custom_create185__c/fields/custom_create_185field614__c.field-meta.xml
<CustomField>
    <fullName>custom_create_185field614__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 185field614</label>
    <type>Checkbox</type>
</CustomField>